tests/errors/switch_variable_case.experr
switch case label must be a constant scalar